[package]
name = "thule"
version = "0.1.0"
authors = ["viperscape <chrisfgill@gmail.com>"]

[dependencies]
nalgebra = "*"

font-atlas = "0.1.0"
font-atlas-image = "0.1.0"
image = "0.3.14"

rustc-serialize = "0.3.16"
rand = "0.3.11"

glium = "0.9.1"

clock_ticks = "*"

hex2d = "*"
genmesh = "0.3.2"
obj = "0.3.0"

noise = "*"
num = "*"

ncollide = { version = "0.6.0", git="https://github.com/sebcrozet/ncollide" }